updated routes and models folder

--- a/views/collaboration_page_buyer.handlebars
+++ b/views/collaboration_page_buyer.handlebars
@@ -109,11 +109,11 @@
 
                       <select id="supp1" name="supplier_1">
 
-                          <option value="abb">ABB Corp</option>
+                          <option value="ABB Corp">ABB Corp</option>
 
-                          <option value="louis">Louis Stores</option>
+                          <option value="Louis Stores">Louis Stores</option>
 
-                          <option value="kingston">Kingston Electronics</option>
+                          <option value="Kingston Electronics">Kingston Electronics</option>
 
                       </select>
 
@@ -135,11 +135,11 @@
 
                       <select id="supp2" name="supplier_2">
 
-                          <option value="abb">ABB Corp</option>
+                          <option value="ABB Corp">ABB Corp</option>
 
-                          <option value="louis">Louis Stores</option>
+                          <option value="Louis Stores">Louis Stores</option>
 
-                          <option value="kingston">Kingston Electronics</option>
+                          <option value="Kingston Electronics">Kingston Electronics</option>
 
                       </select>
 
@@ -161,11 +161,11 @@
 
                       <select id="supp3" name="supplier_3">
 
-                          <option value="abb">ABB Corp</option>
+                          <option value="ABB Corp">ABB Corp</option>
 
-                          <option value="louis">Louis Stores</option>
+                          <option value="Louis Stores">Louis Stores</option>
 
-                          <option value="kingston">Kingston Electronics</option>
+                          <option value="Kingston Electronics">Kingston Electronics</option>
 
                       </select>
 
